--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv-flow": "^3.2.0",
     "ioredis": "^4.17.3",
     "moleculer-repl": "^0.6.6",
+    "robots-parser": "^3.0.1",
     "rss-parser": "^3.13.0",
     "url-join": "^4.0.1"
   },
