Add Jest for testing and configure backend test environment for RSS service

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,8 @@
   "scripts": {
     "dev": "moleculer-runner --hot --repl services/*.service.js services/**/*.service.js",
     "start": "moleculer-runner services/*.service.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "link-packages": "yarn link @activitypods/app @semapps/activitypub @semapps/auth @semapps/backup @semapps/core @semapps/crypto @semapps/importer @semapps/inference @semapps/jsonld @semapps/ldp @semapps/middlewares @semapps/migration @semapps/mime-types @semapps/ontologies @semapps/sync @semapps/nodeinfo @semapps/notifications @semapps/solid @semapps/sparql-endpoint @semapps/triplestore @semapps/void @semapps/webacl @semapps/webfinger @semapps/webhooks @semapps/webid",
     "unlink-packages": "yarn unlink @activitypods/app @semapps/activitypub @semapps/auth @semapps/backup @semapps/core @semapps/crypto @semapps/importer @semapps/inference @semapps/jsonld @semapps/ldp @semapps/middlewares @semapps/migration @semapps/mime-types @semapps/ontologies @semapps/sync @semapps/nodeinfo @semapps/notifications @semapps/solid @semapps/sparql-endpoint @semapps/triplestore @semapps/void @semapps/webacl @semapps/webfinger @semapps/webhooks @semapps/webid"
   },
@@ -18,6 +20,9 @@
     "robots-parser": "^3.0.1",
     "rss-parser": "^3.13.0",
     "url-join": "^4.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   },
   "engines": {
     "node": ">=20"
